# aae512

./: .gitignore  CMakeLists.txt  README.md  hw1.cpp  hw2-3.cpp  hw2-4.cpp  proce.m
headers/: mesher.h  solver.h  utils.h
homework/: hw2-3.cpp
matlab/: alge_mesh.m  analytic.m  clusteringtest.m  debug.m  debug.m~  errortest.m  main  mesh_demo.m  meshtest.m  nozzel.m  plotarrow.m  plotmesh.m  ptsclustering.m  readmesh.m  ring.m  solver_demo.m  solvertest.m  test.m  uniformtest.m  writemesh.m
matlab/Other/: clusteringtest.m  errortest.m  uniformtest.m
src/: main.cpp  solve.cpp  solver.h  utils.cpp
